# saas-tesa

./: .env.example  .gitignore  DEPLOY_VERCEL.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  saastesa.db  vercel.json
.github/workflows/: cd-vercel.yml  ci.yml
api/: index.py
docs/: architecture.md  finding-model.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  theme.ts  types.ts
frontend/src/components/: DomainChart.tsx  FindingsChart.tsx  FindingsTable.tsx  SourceChart.tsx  SummaryCards.tsx  TrendChart.tsx
frontend/src/lib/: insights.ts
scripts/: bootstrap.sh  demo.sh
src/saastesa/: __init__.py  cli.py  config.py  logging.py
src/saastesa/agent/: __init__.py  runner.py
src/saastesa/api/: __init__.py  db.py  db_models.py  main.py  repository.py  schemas.py  store.py
src/saastesa/connectors/: __init__.py  base.py  mock.py
src/saastesa/core/: __init__.py  models.py  risk_scoring.py
src/saastesa/demo/: __init__.py  seed.py
src/saastesa/pipelines/: __init__.py  analyze.py  ingest.py
src/saastesa/sdk/: __init__.py  api_client.py
src/saastesa/services/: __init__.py  tesa_service.py
tests/unit/: test_api.py  test_risk_scoring.py  test_service.py
